fix(profile): show controls on mobile and remove spacer

--- a/components/views/settings/profile/accounts/Item/Item.less
+++ b/components/views/settings/profile/accounts/Item/Item.less
@@ -80,3 +80,13 @@
     }
   }
 }
+
+@media only screen and (max-width: @mobile-breakpoint) {
+  .list-item {
+    .header {
+      .controls {
+        opacity: 1;
+      }
+    }
+  }
+}
